# todo

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml
backend/: CMakeLists.txt  conanfile.py  main.cpp
backend/include/: task_manager.hpp
backend/src/: task_manager.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: TaskManager.js
